--- a/report/css/H5-loading.css
+++ b/report/css/H5-loading.css
@@ -17,7 +17,8 @@ body {
     width: 100%;
     height: 100%;
     border-radius: 50%;
-    background-color: #0062e0;
+    /*background-color: #0062e0;*/
+    background-color: #649afc;
     left: 0;
     top: 0;
     position: absolute;
@@ -30,7 +31,7 @@ body {
     text-align: center;
     height: 20px;
     line-height: 20px;
-    color: #0062e0;
+    color: #649afc;
     position: absolute;
     top: 100%;
 }
