--- a/freeBalance/css/base.css
+++ b/freeBalance/css/base.css
@@ -22,6 +22,13 @@ body {
 body, html {
   font-family: "Microsoft YaHei",sans-serif;
 }
+body {
+  background: #f2f2f2;
+}
+
+ul li {
+  list-style: none;
+}
 
 /*清除浮动*/
 .clearfix:before,
