--- a/freeBalance/css/base.css
+++ b/freeBalance/css/base.css
@@ -1,26 +1,40 @@
-/*html {
-  font-size: 20px;
+html {
+    font-size: 16px;
 }
-body {
-  font-size: 16px;
+
+@media screen and (min-width: 375px) {
+    html {
+        /* iPhone6的375px尺寸作为16px基准，414px正好18px大小, 600 20px */
+        font-size: calc(100% + 2 * (100vw - 375px) / 39);
+        font-size: calc(16px + 2 * (100vw - 375px) / 39);
+    }
 }
-@media only screen and (min-width: 400px) {
-  html {
-    font-size: 21.33333333px !important;
-  }
+@media screen and (min-width: 414px) {
+    html {
+        /* 414px-1000px每100像素宽字体增加1px(18px-22px) */
+        font-size: calc(112.5% + 4 * (100vw - 414px) / 586);
+        font-size: calc(18px + 4 * (100vw - 414px) / 586);
+    }
 }
-@media only screen and (min-width: 414px) {
-  html {
-    font-size: 22.08px !important;
-  }
+@media screen and (min-width: 600px) {
+    html {
+        /* 600px-1000px每100像素宽字体增加1px(20px-24px) */
+        font-size: calc(125% + 4 * (100vw - 600px) / 400);
+        font-size: calc(20px + 4 * (100vw - 600px) / 400);
+    }
 }
-@media only screen and (min-width: 480px) {
-  html {
-    font-size: 25.6px !important;
-}*/
+@media screen and (min-width: 1000px) {
+    html {
+        /* 1000px往后是每100像素0.5px增加 */
+        font-size: calc(137.5% + 6 * (100vw - 1000px) / 1000);
+        font-size: calc(22px + 6 * (100vw - 1000px) / 1000);
+    }
+}
 
 body, html {
   font-family: "Microsoft YaHei",sans-serif;
+  margin: 0;
+  padding: 0;
 }
 body {
   background: #f2f2f2;
@@ -28,6 +42,10 @@ body {
 
 ul li {
   list-style: none;
+}
+
+a {
+  text-decoration: none;
 }
 
 /*清除浮动*/
